--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@capacitor/core": "^4.0.1",
     "@capacitor/ios": "^4.0.1",
     "@ionic/angular": "^6.2.2",
+    "@swimlane/ngx-datatable": "^20.0.0",
     "crypto-js": "^4.1.1",
     "express": "^4.18.1",
+    "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
